--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -32,7 +32,8 @@ header {
 			right:0;
 			border-radius: 5px 0 0 5px;
 			line-height: .2rem;
-			font-size: .019rem;
+			// font-size: .019rem;
+			font-size: 12px;
 			// opacity: .3;
 		}
 		.title {
