--- a/app/wx_share/partials/fee_part.html
+++ b/app/wx_share/partials/fee_part.html
@@ -79,8 +79,8 @@
 		<form>
     </div>
 </div>
-<footer class="bd_footer">
-	 <div  ng-click='submit()' id="submitButton"  >立即投保</div>
+<footer class="bottom_ctrl">
+	<div class="finish" ng-click='submit()' id="submitButton">立即投保</div>
 </footer>
 
  
