--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -22,7 +22,7 @@ header {
       right: 0;
       border-radius: 5px 0 0 5px;
       line-height: .2rem;
-      font-size: .019rem; }
+      font-size: 12px; }
     header .top-container .title {
       font-size: 18px; }
     header .top-container .sub-title {
