simple auto commit

--- a/app/partials/teeth_reservation_list.html
+++ b/app/partials/teeth_reservation_list.html
@@ -4,7 +4,8 @@
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
 	<ul>
 		<li>
-			<div class="title"></div>
+			<div class="teeth-title"></div>
+			<div class="teeth-content"></div>
 		</li>
 
 	</ul>
