simple auto commit

--- a/app/partials/teeth_reservation_list.html
+++ b/app/partials/teeth_reservation_list.html
@@ -1,12 +1,77 @@
-<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=86c9958b8fa1ed21638ab9bab0d1eee9">
+<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=a475e3d9e53906b5c9e067a68b970524">
 
 
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
 	<ul>
 		<li>
-			<div class="teeth-title"></div>
-			<div class="teeth-content"></div>
+			<div class="teeth-title-container">少儿齿科保险保健套餐
+				<div class="teeth-tip"></div>
+			<!-- 	<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div> -->
+			<div class="teeth-status">预约成功</div>
+			</div>
+			<div class="teeth-content">
+
+				<div class="teeth-content_des">就诊客户:王宝宝</div>
+				<div class="teeth-content_title">包含项目：</div>
+				<div class="teeth-content_items">
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>定期口腔检查</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>儿童洁牙</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>涂氟护理</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>窝沟封闭1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>乳牙拔出1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>虫牙填充1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
+						<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
+				</div>
+			</div>
+
+			<div class="teeth-reservationinfo">
+				<div class="teeth-reservationinfo_content" >
+					<div class="teeth-reservationinfo_info">【已治疗】涂氟、窝沟封闭2颗</div>
+					<div class="teeth-reservationinfo_date">2016-09-28</div>		
+				</div>
+				<div class="teeth-reservationinfo_tip">
+						
+						<i class="iconfont" style="color:#ccc;font-size:13px;">&#xe60f;</i>
+				</div>
+			</div>
 		</li>
+
+
+		<li>
+			<div class="teeth-title-container">少儿齿科保险保健套餐
+				<div class="teeth-tip"></div>
+			<!-- 	<div class="ybwx-btn ybwx-btn--primary" style="float:right">预约</div> -->
+			<div class="teeth-status">预约成功</div>
+			</div>
+			<div class="teeth-content">
+
+				<div class="teeth-content_des">就诊客户:王宝宝</div>
+				<div class="teeth-content_title">包含项目：</div>
+				<div class="teeth-content_items">
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>定期口腔检查</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>儿童洁牙</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>涂氟护理</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>窝沟封闭1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>乳牙拔出1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>虫牙填充1颗</div>
+					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
+						<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
+				</div>
+			</div>
+
+			<div class="teeth-reservationinfo">
+				<div class="teeth-reservationinfo_content" >
+					<div class="teeth-reservationinfo_info">【已治疗】涂氟、窝沟封闭2颗</div>
+					<div class="teeth-reservationinfo_date">2016-09-28</div>		
+				</div>
+				<div class="teeth-reservationinfo_tip">
+						
+						<i class="iconfont" style="color:#ccc;font-size:13px;">&#xe60f;</i>
+				</div>
+			</div>
+		</li>
+
 
 	</ul>
 </div>
