--- a/app/template/new/product_202.html
+++ b/app/template/new/product_202.html
@@ -41,7 +41,7 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>投保年龄为18至60周岁。</p>
+			<p>承保年龄为18-60周岁。</p>
 			<h4>2.合同生效日</h4>
 			<p>保险合同生效日以您投保次日零时开始。</p>
 			<h4>3.等待期</h4>
