--- a/app/template/new/product_203.html
+++ b/app/template/new/product_203.html
@@ -95,12 +95,12 @@
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>可以给亲妹妹投保吗？</div></div>	
+				<div class="qa-content"><div>今天买了，什么时间生效呢？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>可以的，在填写投保信息时投保人和被保险人均填写您妹妹的信息即可。</div>
+					<div>本保险合同自您成功购买保险的4日后零时开始生效。</div>
 				</div>
 			</li>
 			<li class="qa-item  question hide">
