--- a/app/css/teeth_reservation_list.css
+++ b/app/css/teeth_reservation_list.css
@@ -1,3 +1,142 @@
+@charset "UTF-8";
 .teeth_reservation_container {
   background-color: #f5f5f5;
   padding: 10px; }
+  .teeth_reservation_container li {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 8px 10px 15px;
+    margin-bottom: 10px; }
+.teeth-title-container {
+  height: 50px;
+  line-height: 50px;
+  color: #444;
+  font-size: 15px;
+  position: relative;
+  position: relative;
+  padding-left: 10px; }
+  .teeth-title-container::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 0 0 1px 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .teeth-title-container::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .teeth-title-container::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+.teeth-status {
+  color: #4285f4;
+  float: right; }
+.teeth-content_des {
+  color: #999;
+  font-size: 13px;
+  height: 40px;
+  line-height: 40px; }
+.teeth-content_title {
+  font-size: 14px;
+  color: #444;
+  font-weight: 600; }
+.teeth-content_items {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap; }
+.teeth-content_item {
+  -webkit-box-flex: 0 1 50%;
+  -webkit-flex: 0 1 50%;
+  -moz-box-flex: 0 1 50%;
+  -ms-flex: 0 1 50%;
+  flex: 0 1 50%;
+  font-size: 14px;
+  line-height: 1.9; }
+.teeth-tip {
+  position: absolute;
+  width: 10px;
+  height: 20px;
+  background-color: #4285f4;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  left: -10px;
+  top: 14px; }
+.teeth-content_item_pointer {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  background-color: #4285f4;
+  vertical-align: 2px;
+  margin-right: 5px; }
+.teeth-reservationinfo {
+  position: relative;
+  padding: 15px 0 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .teeth-reservationinfo::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #e2e2e2;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .teeth-reservationinfo::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .teeth-reservationinfo::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+.teeth-reservationinfo_content {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+   }
+.teeth-reservationinfo_tip {
+  width: 20px;
+  line-height: 40px;
+  height: 40px; }
+.teeth-reservationinfo_info {
+  color: #4285f4;
+  font-size: 14px; }
+.teeth-reservationinfo_date {
+  padding-left: 5px;
+  color: #999;
+  font-size: 12px; }
