--- a/app/sass/teeth_reservation_list.scss
+++ b/app/sass/teeth_reservation_list.scss
@@ -2,13 +2,99 @@
 * @Author: fanzhang
 * @Date:   2016-08-30 11:05:30
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-08-30 11:07:30
+* @Last Modified time: 2016-08-30 15:38:45
 */
-
+   @import "base/classes.scss";
+   @import "base/variables.scss";
 .teeth_reservation_container{
-
 	background-color: #f5f5f5;
-
 	padding:10px;
+	li{
+		background-color:#fff;
+		border:1px solid #ccc;
+		border-radius:5px;
+		padding:8px 10px 15px;
+		margin-bottom:10px;
+	}
+}	
 
+.teeth-title-container{
+		height:	50px;
+		line-height: 50px;
+		color:#444;
+		font-size:15px;
+		@include border(0 0 1px 0,#ccc);
+		position:relative;
+		padding-left:10px;
 }
+.teeth-status{
+	color:#4285f4;
+	float:right;
+}
+.teeth-content_des{
+	color:#999;
+	font-size:13px;
+	height:40px;
+	line-height:40px;
+}
+
+.teeth-content_title{
+	font-size:14px;
+	color:#444;
+	font-weight:600;
+}
+.teeth-content_items{
+	@include flexbox;
+	@include flex-wrap(wrap);
+}
+.teeth-content_item{
+	@include flex(0 1 50%);
+	font-size:14px;
+	line-height:1.9;
+}
+
+.teeth-tip{
+	position:absolute;
+	width:10px;
+	height:20px;
+	background-color: #4285f4;
+	border-bottom-right-radius:5px;
+	border-top-right-radius:5px;
+	left:-10px;
+	top:14px;
+}
+
+
+.teeth-content_item_pointer{
+	display:inline-block;
+	width:5px;
+	height:5px;
+	border-radius:100%;
+	background-color: #4285f4;
+	vertical-align:2px;	
+	margin-right:5px;
+}
+.teeth-reservationinfo{
+	@include border(1px 0 0 0,#e2e2e2);
+	padding:15px 0 0;
+	@include flexbox;
+}
+.teeth-reservationinfo_content{
+	@include flex(1);
+}
+.teeth-reservationinfo_tip{
+	width:20px;
+	line-height:40px;
+	height:40px;
+}
+.teeth-reservationinfo_info{
+	color:#4285f4;
+	font-size:14px;
+}
+.teeth-reservationinfo_date{
+	padding-left:5px;
+	color:#999;
+	font-size:12px;
+}
+
+
