simple auto commit

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -437,7 +437,7 @@ footer {
 
 .ybwx-btn{
    height: 40px;
-   width: 120px;
+   width: 100%;
    color: #fff;
    font-size: 15px;
    text-align: center;
