--- a/app/partials/teeth_reservation_detail.html
+++ b/app/partials/teeth_reservation_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/teeth_reservation_detail.css?rev=4abcb7f91908f8486291457db141271d">
+<link rel="stylesheet" href="css/teeth_reservation_detail.css?rev=7cbda3dd7a3e797d4d1ffe85333a42ec">
 
 <div class="teeth-detail-wrapper">
 
@@ -11,12 +11,45 @@
 	 </div>	
 
 	<div class="reservation-body">
+		<div class="reservation-body_title">预约就诊信息</div>
+		<ul class="reservation-body-container">
+			<li class="reservation-body-item">
+				<div  class="reservation-body-item_left">
+					<div class="showtip"></div>
+				</div>
+				<div  class="reservation-body-item_right">
+					<div class="reservation-body-item_title">【已治疗】涂氟、窝沟封闭2颗</div>	
+					<div class="reservation-body-item_des">瑞泰口腔医院双井分院</div>
+					<div class="reservation-body-item_date">2016-09-28</div>
+				</div>
+			</li>	
 
+			<li class="reservation-body-item">
+				<div  class="reservation-body-item_left">
+					<div class="showtip"></div>
+				</div>
+				<div  class="reservation-body-item_right">
+					<div class="reservation-body-item_title">【已治疗】涂氟、窝沟封闭2颗</div>	
+					<div class="reservation-body-item_des">瑞泰口腔医院双井分院</div>
+					<div class="reservation-body-item_date">2016-09-28</div>
+				</div>
+			</li>		
 
+			<li class="reservation-body-item">
+				<div  class="reservation-body-item_left">
+					<div class="showtip"></div>
+				</div>
+				<div  class="reservation-body-item_right">
+					<div class="reservation-body-item_title">【已治疗】涂氟、窝沟封闭2颗</div>	
+					<div class="reservation-body-item_des">瑞泰口腔医院双井分院</div>
+					<div class="reservation-body-item_date">2016-09-28</div>
+				</div>
+			</li>				
+		</ul>
 	</div>
 
 	<div class="reservation-footer">
-		<div class="ybwx-btn ybwx-btn--primary"></div>
+		<div class="ybwx-btn ybwx-btn--primary">复诊</div>
 	</div>
 </div>
 
